--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,1 @@
-html {
-  background-color: white;
-}
-
-.fondo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-}
+@import "tailwindcss"
